<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_24dp_e3e3e3_fill0_wght400_grad0_opsz24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/alert"
            android:title="@string/alerts" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/chat_24dp_e3e3e3_fill0_wght400_grad0_opsz24"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>