<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.resqnet_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_alert"
        android:name="com.example.resqnet_app.ui.alerts.AlertsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_alerts" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.resqnet_app.ui.map.MapFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.resqnet_app.ui.chat.ChatFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_chat" />
</navigation>