<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="12dp"
    android:layout_marginTop="12dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:elevation="4dp"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/alertTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/alertMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_message_goes_here"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/alertTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/timestamp"
            android:textColor="#757575"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
